--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -20,7 +17,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="https://www.cfa.harvard.edu/~pmocz/">github.com/hankquinlan</a></li>
+        		<li><a href="https://www.cfa.harvard.edu/~pmocz/">www.cfa.harvard.edu/~pmocz/</a></li>
         		<li><a href="https://github.com/pmocz">github.com/pmocz</a></li>
 			</ul>
 		</footer>
