--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">CV</h2>
             <p class="text-muted">Download my <a href="pmocz_CV.pdf">CV (.pdf)</a><br><br>
-            <embed src="pmocz_CV.pdf" width=850px height=1100>
+            <object data="pmocz_CV.pdf" type="application/pdf" width="100%" height=900px>
+            <p>embedded pdf not supported on device -- link to download <a href="pmocz_CV.pdf">CV (.pdf)</a></p>
+            </object>
+            <!-- <embed src="pmocz_CV.pdf" width=850px height=1100> -->
           </div>
         </div>
       </div>
