--- a/index.html
+++ b/index.html
@@ -157,9 +157,12 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">CV</h2>
             <p class="text-muted">Download my <a href="pmocz_CV.pdf">CV (.pdf)</a><br><br>
-            <object data="pmocz_CV.pdf" type="application/pdf" width="100%" height=900px>
+            <div id="pmoczCV"></div>
+            <script src="/js/pdfobject.min.js"></script>
+            <script>PDFObject.embed("pmocz_CV.pdf", "#pmoczCV");</script>
+            <!-- <object data="pmocz_CV.pdf" type="application/pdf" width="100%" height=900px>
             <p>embedded pdf not supported on device -- link to download <a href="pmocz_CV.pdf">CV (.pdf)</a></p>
-            </object>
+            </object> -->
             <!-- <embed src="pmocz_CV.pdf" width=850px height=1100> -->
           </div>
         </div>
