--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,7 @@
                   <h2>Axion Dark Matter</h2>
                   <p class="item-intro text-muted">quantum turbulent properties</p>
                   <!--  <img class="img-fluid d-block mx-auto" src="img/portfolio/axion.png" alt="">  -->
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/UBf9ghy2lPI?autoplay=1&loop=1" frameborder="0" allowfullscreen ></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/UBf9ghy2lPI" frameborder="0" allowfullscreen ></iframe>
                   <p>  Ultralight bosonic scalar field (axion) dark matter is a viable alternative to the standard cold dark matter (CDM) paradigm, 
                   as it makes the same large-scale predictions as CDM and potentially overcomes CDM's small-scale problems via a galaxy-scale de Broglie wavelength.
 				  Here I investigated some unexplored theoretical aspects of relaxed Bose-Einstein condensate (axion) dark matter (BECDM) haloes using state-of-the-art simulations.</p>
