--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4 class="subheading">Cosmic-Ray Pressure MHD instability</h4>
+                    <h4 class="subheading">Cosmic-Ray Pressure MHD Instability</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Paper on my simulations of a cosmic-ray pressure gradient instability in a turbulent MHD environment at a shock interface, as part of my project for Astronomy 253 (plasma physics). Read the <a href="manuscripts/pmocz_crmhd.pdf"> report (.pdf) </a> and download the Matlab <a href="https://bitbucket.org/pmocz/crmhd"> code </a>  </p>
@@ -493,7 +493,7 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4 class="subheading">SPH for stellar structure</h4>
+                    <h4 class="subheading">SPH for Stellar Structure</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">A simple <a href="manuscripts/pmocz_sph.pdf">introduction (.pdf)</a> to smoothed-particle hydrodynamics (SPH), if you ever wanted to code your own! </p>
