updated pavoreal link

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     <h4 class="subheading">GPU Volume Rendering</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted"><a href="https://www.cfa.harvard.edu/~fbecerra/pavoreal/index.html">PAVOREAL</a> (PArellel VOlume REndering ALgorithm) on GPUs </br>
+                    <p class="text-muted"><a href="http://fernandobecerra.com/pavoreal/">PAVOREAL</a> (PArellel VOlume REndering ALgorithm) on GPUs </br>
                     <img src="img/projects/pvlogo.png" alt="">
                     </p>
                   </div>
