--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
             </h3>
             <h3 class="section-heading">Recent Papers</h3>
                 <p>
-				<a href="http://adsabs.harvard.edu/abs/2018arXiv180103507M"> On the Schrodinger-Poisson--Vlasov-Poisson correspondence </a>
+				<a href="http://adsabs.harvard.edu/abs/2018PhRvD..97h3519M"> On the Schrodinger-Poisson--Vlasov-Poisson correspondence </a>
                 <br/>
-                <b>Mocz, P.</b>; Lancaster, L.; Fialkov A.; Becerra, F.; 2018 submitted
+                <b>Mocz, P.</b>; Lancaster, L.; Fialkov A.; Becerra, F.; Chavanis, P.H.; 2018 PhRvD, 97, 3519v
                 </p>
                 <p>
                 <a href="http://adsabs.harvard.edu/abs/2017MNRAS.471.4559M"> Galaxy Formation with BECDM: I. Turbulence and relaxation of idealised haloes </a>
