--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-heading">Dr. Philip Mocz</div>
+          <div class="intro-heading">Philip Mocz</div>
           <div class="intro-lead-in">Einstein Fellow at <a href = "http://web.astro.princeton.edu/">Princeton University</a></div>      
           <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
@@ -179,7 +179,7 @@
             <h3 class="section-subheading text-muted">A complete record of my publications can be found using the searches below:
             <p></p>
             <a class="btn btn-xl" href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?sim_query=YES&aut_xct=NO&author=mocz%2C+p.%0D%0A&nr_to_return=50&start_nr=1&query_type=PAPERS&select_nr=50&select_start=1&jou_pick=ALL&data_and=ALL&group_and=ALL&sort=SCORE&aut_syn=YES&aut_wt=1.0&aut_wgt=YES&db_key=AST&version=1&version=1&db_key=AST">ADS search</a>
-            <a class="btn btn-xl" href="http://arxiv.org/find/astro-ph/1/au:+mocz/0/1/0/all/0/1">arXiv search</a>
+            <a class="btn btn-xl" href="https://arxiv.org/search/?query=Mocz%2C+P&searchtype=author">arXiv search</a>
             </p>
             </h3>
             <h3 class="section-heading">Recent Papers</h3>
