--- a/index.html
+++ b/index.html
@@ -1275,7 +1275,7 @@
                   <p>  Work with <a href="http://mustafa-amin.com/">Mustafa Amin</a> (Rice). We studied the non-equilibrium dynamics of an unstable scalar field in the universe, which results in formation and gravitational clustering of solitons.  Rapid formation of a large number of solitons is driven by attractive self-interactions of the field, after which gravity clusters them together, leading to mergers, scatterings and formation of soliton binaries.
 				  </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/">--paper link [tba]--</a></li>
+                    <li><a href="https://arxiv.org/abs/1902.07261">--paper link--</a></li>
                     <li><a href="https://youtu.be/Sz079O4EJUE">--more movies--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
