update recent papers

--- a/index.html
+++ b/index.html
@@ -184,9 +184,19 @@
             </h3>
             <h3 class="section-heading">Recent Papers</h3>
                 <p>
+				<a href="http://adsabs.harvard.edu/abs/2019MNRAS.485.2861C"> Heating of Milky Way disc stars by dark matter fluctuations in cold dark matter and fuzzy dark matter paradigms </a>
+                <br/>
+                Church, B.; <b>Mocz, P.</b>;  Ostriker, J.P.; 2019 MNRAS, 485, 2861
+                </p>
+                <p>
+				<a href="http://adsabs.harvard.edu/abs/2018MNRAS.480.3916M"> Star formation from dense shocked regions in supersonic isothermal magnetoturbulence </a>
+                <br/>
+                <b>Mocz, P.</b>;  Burkhart, B.; 2018 MNRAS, 480, 3916
+                </p>
+                <p>
 				<a href="http://adsabs.harvard.edu/abs/2018PhRvD..97h3519M"> On the Schrodinger-Poisson--Vlasov-Poisson correspondence </a>
                 <br/>
-                <b>Mocz, P.</b>; Lancaster, L.; Fialkov A.; Becerra, F.; Chavanis, P.H.; 2018 PhRvD, 97, 3519v
+                <b>Mocz, P.</b>; Lancaster, L.; Fialkov A.; Becerra, F.; Chavanis, P.H.; 2018 PhRvD, 97, 3519
                 </p>
                 <p>
                 <a href="http://adsabs.harvard.edu/abs/2017MNRAS.471.4559M"> Galaxy Formation with BECDM: I. Turbulence and relaxation of idealised haloes </a>
