--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <html lang="en">
 
   <head>
-
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136974463-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	
+	gtag('config', 'UA-136974463-1');
+	</script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Philip Mocz, astrophysics, professional website">
+    <meta name="author" content="Philip Mocz">
 
     <title>Philip Mocz</title>
 
