--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			  role. I have also worked on inventing new robust and 
 			  accurate numerical methods for solving the MHD equations 
 			  on a moving-mesh in the <a 
-			  href="https://www.h-its.org/tap-software-en/arepo/">Arepo</a> 
+			  href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a> 
 			  code. I've developed a numerical method for MHD which 
 			  preserves mass, momentum, energy, the divergence-free 
 			  property of the magnetic fields, and Galilean-invariance 
@@ -871,7 +871,7 @@
 				 I have extended the Discontinuous Galerkin (DG) method 
 				 for solving the equations of fluid dynamics 
 				 numerically to a moving mesh in <a 
-				 href="https://www.h-its.org/tap-software-en/arepo/">Arepo</a>. 
+				 href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a>. 
 				 The DG approach uses local basis functions to 
 				 represent the solution on a cell rather than the 
 				 extended stencils of finite volume approaches and is 
