--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <h2 class="section-heading">Publications</h2>
             <h3 class="section-subheading text-muted">A complete record of my publications can be found using the searches below:
             <p></p>
-            <a class="btn btn-xl" href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?sim_query=YES&aut_xct=NO&author=mocz%2C+p.%0D%0A&nr_to_return=50&start_nr=1&query_type=PAPERS&select_nr=50&select_start=1&jou_pick=ALL&data_and=ALL&group_and=ALL&sort=SCORE&aut_syn=YES&aut_wt=1.0&aut_wgt=YES&db_key=AST&version=1&version=1&db_key=AST">ADS search</a>
+            <a class="btn btn-xl" href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Mocz%2C%20Philip%22&sort=date%20desc%2C%20bibcode%20desc">ADS search</a>
             <a class="btn btn-xl" href="https://arxiv.org/search/?query=Mocz%2C+P&searchtype=author">arXiv search</a>
             </p>
             </h3>
@@ -1014,7 +1014,7 @@
 				  (CT) scheme for accurate simulation of the 
 				  magnetohydrodynamics (MHD) equations in the 
 				  moving-mesh <a 
-				  href="https://www.h-its.org/tap-software-en/arepo/">Arepo</a> 
+				  href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a> 
 				  code. Shown in the image is a simulation of the 
 				  magnetic energy in a magnetic disk galaxy.
                   </p>
