--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
 
+    <!-- My network -->
+    <style type="text/css">
+      #mynetwork {
+        width: 800px;
+        height: 80px;
+        border: 1px solid lightgray;
+        background-color:#eeeeee;
+      }
+    </style>
+    
+    <script type="text/javascript" src="vis-network.min.js"></script>
+    <script type="text/javascript" src="mygraph.js"></script>
+    <link href="vis-network.min.css" rel="stylesheet" type="text/css">
+
   </head>
 
   <body id="page-top">
@@ -231,6 +245,12 @@
 			    <br/>
                 <b>Mocz, P.</b>; 2017 J. Comp. Phys., 328, 221
                 </p>
+
+      <!-- Collaborator network  onload="draw()" -->
+      <button onclick="document.getElementById('mynetwork').style.height = '600px'; draw()">Visualize Collaborator Network</button> <font color="red">(beta)</font>
+      <center>
+      <div id="mynetwork"><div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"><canvas width="800" height="800" style="position: relative; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"></canvas></div></div>
+      </center>
 
           </div>
         </div>
@@ -658,7 +678,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <span class="copyright">Copyright &copy; Philip Mocz 2018</span>
+            <span class="copyright">Copyright &copy; Philip Mocz 2019</span>
           </div>
         </div>
       </div>
