--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!-- My network -->
     <style type="text/css">
       #mynetwork {
-        width: 800px;
-        height: 80px;
+        width: 300px;
+        height: 50px;
         border: 1px solid lightgray;
         background-color:#eeeeee;
       }
@@ -247,9 +247,9 @@
                 </p>
 
       <!-- Collaborator network  onload="draw()" -->
-      <button onclick="document.getElementById('mynetwork').style.height = '600px'; draw()">Visualize Collaborator Network</button> <font color="red">(beta)</font>
+      <button onclick="document.getElementById('mynetwork').style.height = '640px'; document.getElementById('mynetwork').style.width = '100%';  draw()">Visualize Collaborator Network</button> <font color="red">(beta)</font>
       <center>
-      <div id="mynetwork"><div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"><canvas width="800" height="800" style="position: relative; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"></canvas></div></div>
+      <div id="mynetwork"><div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"><canvas width="300" height="300" style="position: relative; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"></canvas></div></div>
       </center>
 
           </div>
