--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
             <p></p>
             <a class="btn btn-xl" href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Mocz%2C%20Philip%22&sort=date%20desc%2C%20bibcode%20desc">ADS search</a>
             <a class="btn btn-xl" href="https://arxiv.org/search/?query=Mocz%2C+P&searchtype=author">arXiv search</a>
+            <a class="btn btn-xl" href="https://scholar.google.com/citations?user=pmocz&user=qv1dWtMAAAAJ">Google scholar</a>
             </p>
             </h3>
             <h3 class="section-heading">Recent Papers</h3>
@@ -247,7 +248,7 @@
                 </p>
 
       <!-- Collaborator network  onload="draw()" -->
-      <button onclick="document.getElementById('mynetwork').style.width = '90%'; document.getElementById('mynetwork').style.height = '640px';   draw()">Visualize Collaborator Network</button> <font color="red">(beta)</font>
+      <button onclick="document.getElementById('mynetwork').style.width = '90%'; document.getElementById('mynetwork').style.height = '640px';   draw()" href="#collaborators>Visualize Collaborator Network</button> <font color="red">(beta)</font>
       <center>
       <div id="mynetwork"><div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"><canvas width="300" height="300" style="position: relative; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"></canvas></div></div>
       </center>
