--- a/index.html
+++ b/index.html
@@ -248,12 +248,14 @@
                 </p>
 
       <!-- Collaborator network  onload="draw()" -->
-      <button id="collaborators" onclick="document.getElementById('mynetwork').style.width = '90%'; document.getElementById('mynetwork').style.height = '640px';   draw()">Visualize Collaborator Network</button> <font color="red">(beta)</font>
+      <div id="collaborators">
+      <button onclick="document.getElementById('mynetwork').style.width = '90%'; document.getElementById('mynetwork').style.height = '640px';   draw()">Visualize Collaborator Network</button> <font color="red">(beta)</font>
       <center>
       <div id="mynetwork"><div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"><canvas width="300" height="300" style="position: relative; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"></canvas></div></div>
       </center>
 
           </div>
+        </div>
         </div>
       </div>
     </section>    
