updated cv, papers

--- a/index.html
+++ b/index.html
@@ -206,45 +206,62 @@
             </p>
             </h3>
             <h3 class="section-heading">Recent Papers</h3>
+				<p>
+				<a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190804790Y/abstract"> . Fuzzy Dark Matter Soliton Cores around Supermassive Black Holes </a>
+                <br/>
+                Davis, E.; <b>Mocz, P.</b>; 2019 MNRAS, submitted
+                </p>
                 <p>
-				<a href="http://adsabs.harvard.edu/abs/2019MNRAS.485.2861C"> Heating of Milky Way disc stars by dark matter fluctuations in cold dark matter and fuzzy dark matter paradigms </a>
+				<p>
+				<a href="https://arxiv.org/abs/1908.00544">  A Markov model for non-lognormal density distributions in compressive isothermal turbulence </a>
+                <br/>
+                <b>Mocz, P.</b>; Burkhart, B.; 2019 ApjL, submitted
+                </p>
+                <p>
+				<p>
+				<a href="https://arxiv.org/abs/1902.07261"> Formation, Gravitational Clustering and Interactions of Non-relativistic Solitons in an Expanding Universe </a>
+                <br/>
+                Amin, M.; <b>Mocz, P.</b>; 2019 Phys.Rev.D, accepted
+                </p>
+                <p>
+				<a href="http://ui.adsabs.harvard.edu/abs/2019MNRAS.485.2861C"> Heating of Milky Way disc stars by dark matter fluctuations in cold dark matter and fuzzy dark matter paradigms </a>
                 <br/>
                 Church, B.; <b>Mocz, P.</b>;  Ostriker, J.P.; 2019 MNRAS, 485, 2861
                 </p>
                 <p>
-				<a href="http://adsabs.harvard.edu/abs/2018MNRAS.480.3916M"> Star formation from dense shocked regions in supersonic isothermal magnetoturbulence </a>
+				<a href="http://ui.adsabs.harvard.edu/abs/2018MNRAS.480.3916M"> Star formation from dense shocked regions in supersonic isothermal magnetoturbulence </a>
                 <br/>
                 <b>Mocz, P.</b>;  Burkhart, B.; 2018 MNRAS, 480, 3916
                 </p>
                 <p>
-				<a href="http://adsabs.harvard.edu/abs/2018PhRvD..97h3519M"> On the Schrodinger-Poisson--Vlasov-Poisson correspondence </a>
+				<a href="http://ui.adsabs.harvard.edu/abs/2018PhRvD..97h3519M"> On the Schrodinger-Poisson--Vlasov-Poisson correspondence </a>
                 <br/>
                 <b>Mocz, P.</b>; Lancaster, L.; Fialkov A.; Becerra, F.; Chavanis, P.H.; 2018 PhRvD, 97, 3519
                 </p>
                 <p>
-                <a href="http://adsabs.harvard.edu/abs/2017MNRAS.471.4559M"> Galaxy Formation with BECDM: I. Turbulence and relaxation of idealised haloes </a>
+                <a href="http://ui.adsabs.harvard.edu/abs/2017MNRAS.471.4559M"> Galaxy Formation with BECDM: I. Turbulence and relaxation of idealised haloes </a>
                 <br/>
                 <b>Mocz, P.</b>; Vogelsberger, M.; Robles, V.; Zavala J.; Boylan-Kolchin, M.; Fialkov A.; Hernquist, L.; 2017 MNRAS, 471, 4559
                 </p>
                 <p>
-                <a href="http://adsabs.harvard.edu/abs/2017ApJ...842L...9H"> Unveiling the role of the magnetic field at the smallest scales of star formation </a>
+                <a href="http://ui.adsabs.harvard.edu/abs/2017ApJ...842L...9H"> Unveiling the role of the magnetic field at the smallest scales of star formation </a>
                 <br/>
                 Hull C.L.H.; <b>Mocz, P.</b>; Burkhart, B.; Goodman, A.A.; Girart, J.M.; Cortes, P.C.; Hernquist, L.; Li, Z.-Y;  Lai, S.-P.; Springel, V.;  2017 ApJL, 842, 9
                 </p>
                 <p>
-                <a href="http://adsabs.harvard.edu/abs/2017ApJ...838...40M"> Moving mesh simulations of star forming cores in magneto-gravo-turbulence </a>
+                <a href="http://ui.adsabs.harvard.edu/abs/2017ApJ...838...40M"> Moving mesh simulations of star forming cores in magneto-gravo-turbulence </a>
 				<br/>
                 <b>Mocz, P.</b>; Burkhart, B.; Hernquist, L.; McKee, C.; Springel, V.;  2017 ApJ, 838, 1
                 </p>
                 <p>
-                <a href="http://adsabs.harvard.edu/abs/2017MNRAS.465.3154M"> Integer lattice dynamics for Vlasov-Poisson </a>
+                <a href="http://ui.adsabs.harvard.edu/abs/2017MNRAS.465.3154M"> Integer lattice dynamics for Vlasov-Poisson </a>
 				<br/>
                 <b>Mocz, P.</b>; Succi, S.; 2017 MNRAS, 465, 3154      
                 </p>
                       <div id="collaborators">
 	                  </div>
                 <p> 
-                <a href="http://adsabs.harvard.edu/abs/2017JCoPh.328..221M"> Correspondence between constrained transport and vector potential methods for MHD </a>
+                <a href="http://ui.adsabs.harvard.edu/abs/2017JCoPh.328..221M"> Correspondence between constrained transport and vector potential methods for MHD </a>
 			    <br/>
                 <b>Mocz, P.</b>; 2017 J. Comp. Phys., 328, 221
                 </p>
@@ -716,7 +733,7 @@
 				 understand the properties of the accretion disk.
                   </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/abs/2011ApJ...729...30M">--paper link--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2011ApJ...729...30M">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -767,8 +784,8 @@
 				 appear to be IC ghosts (paper 2).
                   </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/abs/2011MNRAS.413.1107M">--paper link 1--</a></li>
-                    <li><a href="http://adsabs.harvard.edu/abs/2011MNRAS.417.1576M"">--paper link 2--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2011MNRAS.413.1107M">--paper link 1--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2011MNRAS.417.1576M"">--paper link 2--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -811,7 +828,7 @@
 				 which has not been highlighted by previous studies.
                   </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/doi/10.1111/j.1365-2966.2012.21458.x">--paper link--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/doi/10.1111/j.1365-2966.2012.21458.x">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -859,7 +876,7 @@
 				 distinguish between physical and aperture effects.
                   </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/abs/2013MNRAS.432.3381M">--paper link--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2013MNRAS.432.3381M">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -906,7 +923,7 @@
 				 with the method.
                   </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/abs/2014MNRAS.437..397M">--paper link--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2014MNRAS.437..397M">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -960,7 +977,7 @@
 				 exactly without artefacts.
                   </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/abs/2014MNRAS.442...43M">--paper link--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2014MNRAS.442...43M">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -1000,7 +1017,7 @@
 				 for dark matter.
                   </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/abs/2015PhRvE..91e3304M">--paper link--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2015PhRvE..91e3304M">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -1042,7 +1059,7 @@
 				  magnetic energy in a magnetic disk galaxy.
                   </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/abs/2016MNRAS.463..477M">--paper link--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2016MNRAS.463..477M">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -1121,7 +1138,7 @@
                 instead of N^6.
                   </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/abs/2017MNRAS.465.3154M">--paper link--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2017MNRAS.465.3154M">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -1209,7 +1226,7 @@
                 beta unity.
                   </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/abs/2017ApJ...838...40M">--paper link--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2017ApJ...838...40M">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -1245,7 +1262,7 @@
                   as it makes the same large-scale predictions as CDM and potentially overcomes CDM's small-scale problems via a galaxy-scale de Broglie wavelength.
 				  Here I investigated some unexplored theoretical aspects of relaxed Bose-Einstein condensate (axion) dark matter (BECDM) haloes using state-of-the-art simulations.</p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/abs/2017MNRAS.471.4559M">--paper link--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2017MNRAS.471.4559M">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -1281,7 +1298,7 @@
                   converge to the Vlasov-Poisson system for 6D collisionless matter (e.g. cold dark matter) 
                   in the sense that the self-potential converges as (m^-2) and the solution encodes rich phase-space information. </p>
                   <ul class="list-inline">
-                    <li><a href="http://adsabs.harvard.edu/abs/2018PhRvD..97h3519M">--paper link--</a></li>
+                    <li><a href="http://ui.adsabs.harvard.edu/abs/2018PhRvD..97h3519M">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
