--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 				<p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190804790Y/abstract"> . Fuzzy Dark Matter Soliton Cores around Supermassive Black Holes </a>
                 <br/>
-                Davis, E.; <b>Mocz, P.</b>; 2019 MNRAS, submitted
+                Davies, E.Y.; <b>Mocz, P.</b>; 2019 MNRAS, submitted
                 </p>
                 <p>
 				<p>
@@ -662,7 +662,7 @@
             <p> </p>
             <ul class="list-inline">
               <li>Department of Astrophysical Sciences</li>
-              <li>Peyton Hall</li>
+              <li>Princeton University</li>
               <li>4 Ivy Lane</li>
               <li>Princeton, NJ 08544, USA</li>
             </ul>
