--- a/index.html
+++ b/index.html
@@ -142,30 +142,53 @@
         </div>
         <div class="row text-justify text-muted">
 			<p>
-			  I am a <a 
-			  href="http://cxc.harvard.edu/fellows/fellowslist.html"> 
-			  NASA Einstein Fellow </a> at <a 
-			  href="http://web.astro.princeton.edu/">Princeton 
-			  University</a>. My research interests lie in numerical 
-			  simulation studies of astrophysical systems where 
-			  magnetohydrodynamics and turbulence play an important 
-			  role. I have also worked on inventing new robust and 
-			  accurate numerical methods for solving the MHD equations 
-			  on a moving-mesh in the <a 
-			  href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a> 
-			  code. I've developed a numerical method for MHD which 
-			  preserves mass, momentum, energy, the divergence-free 
-			  property of the magnetic fields, and Galilean-invariance 
-			  (exact advection). I am interested in galaxy evolution 
-			  and feedback, black hole physics, structure formation, 
-			  turbulence in the ISM, alternative theories of dark 
-			  matter (BEC dark matter), memory-efficient solvers for 
-			  the 6D Vlasov-Poisson equations, computer visualization, 
-			  and applications of machine learning and computer vision. 
-			  My PhD thesis was completed with my advisor <a 
+			  I am a <a href="http://cxc.harvard.edu/fellows/fellowslist.html"> NASA Einstein Fellow </a> at 
+			  <a href="http://web.astro.princeton.edu/">Department of Astrophysical Sciences at Princeton University</a>. 
+			  
+			  I develop theory and high-performance simulations to 
+			  study structure formation on scales from cosmology to 
+			  star formation. I am at the forefront of research in 
+			  scalar field dark matter, which has seen considerably 
+			  growing interest in the physics and astronomy communities 
+			  over the last few years. The near-century-old dark matter 
+			  problem is one of the most intriguing mysteries in modern 
+			  physics: we do not know the nature of 84 percent of 
+			  matter in the Universe, yet it is thought to govern 
+			  cosmic structure and hold galaxies together. Scalar 
+			  fields are a promising candidate, and I have created the 
+			  first cosmological simulations of this type of dark 
+			  matter fully coupled to baryonic physics. With my work, I 
+			  can learn about the behavior of the theory and predict 
+			  how future missions such as the James Webb Space 
+			  Telescope could reveal the nature of the elusive dark 
+			  matter particle. A second active research area of mine is 
+			  the study of turbulent, self-gravitating systems. The 
+			  theory of compressive turbulence lags behind the study of 
+			  the incompressible Navier-Stokes equations. I work on 
+			  developing it to gain physical insight into long-standing 
+			  open problems, such as the inefficiency of star formation 
+			  and the fundamental nature of turbulence.
+			  </p>
+			  <p>
+			  I also develop a variety of new robust, high-performance methods for computational 
+			  physics. My PhD thesis was completed with my advisor <a 
 			  href="http://astronomy.fas.harvard.edu/people/lars-hernquist">Lars 
 			  Hernquist</a> on moving mesh magnetohydrodynamics and 
-			  applications to cosmology and star formation. 
+			  applications to cosmology and star formation. For part of 
+			  that work, I invented a new accurate method for solving 
+			  the magnetohydrodynamic equations on a moving-mesh in the 
+			  <a href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a> 
+			  code. The method preserves mass, momentum, energy, the 
+			  divergence-free property of the magnetic fields, and 
+			  Galilean-invariance (exact advection). 
+			  </p>
+			  <p>
+			  I have broad interests in galaxy evolution 
+			  and feedback, black hole physics, structure formation, 
+			  turbulence in the ISM, alternative theories of dark 
+			  matter (scalar field dark matter), memory-efficient solvers for 
+			  the 6D Vlasov-Poisson equations, computer visualization, 
+			  and applications of machine learning and computer vision in astronomy. 
             </p>
         </div>
       </div>
