--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
           </div>
         </div>
         <div class="row text-justify text-muted">
+			
 			<p>
 			  I am a <a href="http://cxc.harvard.edu/fellows/fellowslist.html"> NASA Einstein Fellow </a> at 
 			  <a href="http://web.astro.princeton.edu/">Department of Astrophysical Sciences at Princeton University</a>. 
@@ -159,8 +160,9 @@
 			  first cosmological simulations of this type of dark 
 			  matter fully coupled to baryonic physics. With my work, I 
 			  can learn about the behavior of the theory and predict 
-			  how future missions such as the James Webb Space 
-			  Telescope could reveal the nature of the elusive dark 
+			  how future missions such as the <a 
+			  href="https://www.jwst.nasa.gov/">James Webb Space 
+			  Telescope</a> could reveal the nature of the elusive dark 
 			  matter particle. A second active research area of mine is 
 			  the study of turbulent, self-gravitating systems. The 
 			  theory of compressive turbulence lags behind the study of 
@@ -168,21 +170,23 @@
 			  developing it to gain physical insight into long-standing 
 			  open problems, such as the inefficiency of star formation 
 			  and the fundamental nature of turbulence.
-			  </p>
-			  <p>
+			</p>
+			  
+			<p>
 			  I also develop a variety of new robust, high-performance methods for computational 
 			  physics. My PhD thesis was completed with my advisor <a 
 			  href="http://astronomy.fas.harvard.edu/people/lars-hernquist">Lars 
 			  Hernquist</a> on moving mesh magnetohydrodynamics and 
-			  applications to cosmology and star formation. For part of 
+			  applications to cosmology and star formation. As part of 
 			  that work, I invented a new accurate method for solving 
 			  the magnetohydrodynamic equations on a moving-mesh in the 
 			  <a href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a> 
 			  code. The method preserves mass, momentum, energy, the 
 			  divergence-free property of the magnetic fields, and 
 			  Galilean-invariance (exact advection). 
-			  </p>
-			  <p>
+			</p>
+			
+			<p>
 			  I have broad interests in galaxy evolution 
 			  and feedback, black hole physics, structure formation, 
 			  turbulence in the ISM, alternative theories of dark 
@@ -190,6 +194,7 @@
 			  the 6D Vlasov-Poisson equations, computer visualization, 
 			  and applications of machine learning and computer vision in astronomy. 
             </p>
+            
         </div>
       </div>
     </section>
