--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <script type="text/javascript" src="vis-network.min.js"></script>
     <script type="text/javascript" src="mygraph.js"></script>
     <link href="vis-network.min.css" rel="stylesheet" type="text/css">
+    
+    <link rel="alternate" type="application/rss+xml"  title="RSS Feed for pmocz.github.io"  href="my-feed.rss.xml" />
 
   </head>
 
@@ -243,7 +245,7 @@
       </center>
       </h3>
             
-            <h3 class="section-heading">Selected Recent Papers</h3>
+            <h3 class="section-heading">Selected Recent Papers <a href="my-feed.rss.xml"><img border="0" alt="Subscribe to What's New" src="img/fZIDSoj.png" width="20" height="20"></h3>
 				<p>
 				<a href="https://journals.aps.org/prl/accepted/ff072Ya7Re114272229b9ab6c8007bb975e1b81a1"> First star-forming structures in fuzzy cosmic filaments </a>
                 <br/> 
