--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <script type="text/javascript" src="mygraph.js"></script>
     <link href="vis-network.min.css" rel="stylesheet" type="text/css">
     
-    <link rel="alternate" type="application/rss+xml"  title="RSS Feed for pmocz.github.io"  href="my-feed.rss.xml" />
+    <!-- <link rel="alternate" type="application/rss+xml"  title="RSS Feed for pmocz.github.io"  href="my-feed.rss.xml" /> -->
 
   </head>
 
@@ -246,28 +246,26 @@
       </h3>
             
             <h3 class="section-heading">Selected Recent Papers <a href="my-feed.rss.xml"><img border="0" alt="Subscribe to What's New" src="img/fZIDSoj.png" width="20" height="20"></h3>
+				<div id="recent">
 				<p>
-				<a href="https://journals.aps.org/prl/accepted/ff072Ya7Re114272229b9ab6c8007bb975e1b81a1"> First star-forming structures in fuzzy cosmic filaments </a>
+				<a href="https://ui.adsabs.harvard.edu/abs/2019PhRvL.123n1301M/abstract"> First star-forming structures in fuzzy cosmic filaments </a>
                 <br/> 
-                <b>Mocz, P.</b>; Fialkov A.; Vogelsberger, M.; Becerra, F.; Amin, M.; Bose, S.; Boylan-Kolchin, M.; Chavanis, P.H.;  Hernquist, L.; Lancaster, L.;  Marinacci, M.; Robles, V.; Zavala, J; 2019 Phys. Rev. Lett. (Editors' Selection) accepted
+                <b>Mocz, P.</b>; Fialkov A.; Vogelsberger, M.; Becerra, F.; Amin, M.; Bose, S.; Boylan-Kolchin, M.; Chavanis, P.H.;  Hernquist, L.; Lancaster, L.;  Marinacci, M.; Robles, V.; Zavala, J; 2019 Phys. Rev. Lett. (Editors' Selection) 123, 14
                 </p>
                 <p>
-				<p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190804790Y/abstract"> Fuzzy Dark Matter Soliton Cores around Supermassive Black Holes </a>
                 <br/>
                 Davies, E.Y.; <b>Mocz, P.</b>; 2019 MNRAS, submitted
                 </p>
                 <p>
-				<p>
-				<a href="https://arxiv.org/abs/1908.00544">  A Markov model for non-lognormal density distributions in compressive isothermal turbulence </a>
+				<a href="https://ui.adsabs.harvard.edu/abs/2019ApJ...884L..35M/abstract">  A Markov model for non-lognormal density distributions in compressive isothermal turbulence </a>
                 <br/>
-                <b>Mocz, P.</b>; Burkhart, B.; 2019 ApjL, submitted
+                <b>Mocz, P.</b>; Burkhart, B.; 2019 ApjL, 884, 2
                 </p>
                 <p>
-				<p>
-				<a href="https://arxiv.org/abs/1902.07261"> Formation, Gravitational Clustering and Interactions of Non-relativistic Solitons in an Expanding Universe </a>
+				<a href="https://https://ui.adsabs.harvard.edu/abs/2019PhRvD.100f3507A/abstract"> Formation, Gravitational Clustering and Interactions of Non-relativistic Solitons in an Expanding Universe </a>
                 <br/>
-                Amin, M.; <b>Mocz, P.</b>; 2019 Phys.Rev.D, accepted
+                Amin, M.; <b>Mocz, P.</b>; 2019 Phys.Rev.D, 100, 6
                 </p>
                 <p>
 				<a href="http://ui.adsabs.harvard.edu/abs/2019MNRAS.485.2861C"> Heating of Milky Way disc stars by dark matter fluctuations in cold dark matter and fuzzy dark matter paradigms </a>
