--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <script type="text/javascript" src="mygraph.js"></script>
     <link href="vis-network.min.css" rel="stylesheet" type="text/css">
     
-    <!-- <link rel="alternate" type="application/rss+xml"  title="RSS Feed for pmocz.github.io"  href="my-feed.rss.xml" /> -->
+    <link rel="alternate" type="application/rss+xml"  title="RSS Feed for pmocz.github.io"  href="my-feed.rss.xml" />
 
   </head>
 
@@ -246,7 +246,6 @@
       </h3>
             
             <h3 class="section-heading">Selected Recent Papers <a href="my-feed.rss.xml"><img border="0" alt="Subscribe to What's New" src="img/fZIDSoj.png" width="20" height="20"></h3>
-				<div id="recent">
 				<p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2019PhRvL.123n1301M/abstract"> First star-forming structures in fuzzy cosmic filaments </a>
                 <br/> 
