--- a/index.html
+++ b/index.html
@@ -247,6 +247,11 @@
             
             <h3 class="section-heading">Selected Recent Papers <a href="my-feed.rss.xml"><img border="0" alt="Subscribe to What's New" src="img/fZIDSoj.png" width="20" height="20"></h3>
 				<p>
+				<a href="https://ui.adsabs.harvard.edu/abs/2019arXiv191105746M/abstract"> Galaxy Formation with BECDM - II. Cosmic Filaments and First Galaxies </a>
+                <br/> 
+                <b>Mocz, P.</b>; Fialkov, A.; Vogelsberger, M.; Becerra, F.; Shen, X.; Robles, V.H.; Amin, M.A.; Zavala, J.; Boylan-Kolchin, M.; Bose, S.; Marinacci, F,; Chavanis, P.H.; Lancaster, K.; Hernquist, L.; 2019 MNRAS, submitted
+                </p>
+				<p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2019PhRvL.123n1301M/abstract"> First star-forming structures in fuzzy cosmic filaments </a>
                 <br/> 
                 <b>Mocz, P.</b>; Fialkov A.; Vogelsberger, M.; Becerra, F.; Amin, M.; Bose, S.; Boylan-Kolchin, M.; Chavanis, P.H.;  Hernquist, L.; Lancaster, L.;  Marinacci, M.; Robles, V.; Zavala, J; 2019 Phys. Rev. Lett. (Editors' Selection) 123, 14
@@ -282,33 +287,32 @@
                 <b>Mocz, P.</b>; Lancaster, L.; Fialkov A.; Becerra, F.; Chavanis, P.H.; 2018 PhRvD, 97, 3519
                 </p>
                 <p>
-                <a href="http://ui.adsabs.harvard.edu/abs/2017MNRAS.471.4559M"> Galaxy Formation with BECDM: I. Turbulence and relaxation of idealised haloes </a>
+                <a href="http://ui.adsabs.harvard.edu/abs/2017MNRAS.471.4559M"> Galaxy Formation with BECDM - I. Turbulence and relaxation of idealised haloes </a>
                 <br/>
                 <b>Mocz, P.</b>; Vogelsberger, M.; Robles, V.; Zavala J.; Boylan-Kolchin, M.; Fialkov A.; Hernquist, L.; 2017 MNRAS, 471, 4559
                 </p>
-                <p>
+                <!-- <p>
                 <a href="http://ui.adsabs.harvard.edu/abs/2017ApJ...842L...9H"> Unveiling the role of the magnetic field at the smallest scales of star formation </a>
                 <br/>
                 Hull C.L.H.; <b>Mocz, P.</b>; Burkhart, B.; Goodman, A.A.; Girart, J.M.; Cortes, P.C.; Hernquist, L.; Li, Z.-Y;  Lai, S.-P.; Springel, V.;  2017 ApJL, 842, 9
-                </p>
+                </p> -->
                 <p>
                 <a href="http://ui.adsabs.harvard.edu/abs/2017ApJ...838...40M"> Moving mesh simulations of star forming cores in magneto-gravo-turbulence </a>
 				<br/>
                 <b>Mocz, P.</b>; Burkhart, B.; Hernquist, L.; McKee, C.; Springel, V.;  2017 ApJ, 838, 1
                 </p>
-                <p>
+                <!-- <p>
                 <a href="http://ui.adsabs.harvard.edu/abs/2017MNRAS.465.3154M"> Integer lattice dynamics for Vlasov-Poisson </a>
 				<br/>
                 <b>Mocz, P.</b>; Succi, S.; 2017 MNRAS, 465, 3154      
-                </p>
+                </p> -->
                       <div id="collaborators">
 	                  </div>
-                <p> 
+                <!-- <p> 
                 <a href="http://ui.adsabs.harvard.edu/abs/2017JCoPh.328..221M"> Correspondence between constrained transport and vector potential methods for MHD </a>
 			    <br/>
                 <b>Mocz, P.</b>; 2017 J. Comp. Phys., 328, 221
-                </p>
-
+                </p> -->
 
           </div>
         </div>
