--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <script type="text/javascript" src="mygraph.js"></script>
     <link href="vis-network.min.css" rel="stylesheet" type="text/css">
     
-    <link rel="alternate" type="application/rss+xml"  title="RSS Feed for pmocz.github.io"  href="my-feed.rss.xml" />
+    <link rel="alternate" type="application/rss+xml"  title="RSS Feed for pmocz.github.io"  href="https://pmocz.github.io/my-feed.rss.xml" />
 
   </head>
 
