--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <h2 class="section-heading">About</h2>
           </div>
         </div>
-        <div class="row text-justify text-muted">
+        <div class="col-lg-12 text-justify text-muted">
 			
 			<p>
 			  I am a <a href="http://cxc.harvard.edu/fellows/fellowslist.html"> NASA Einstein Fellow </a> at 
