--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 				<p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2019PhRvL.123n1301M/abstract"> First star-forming structures in fuzzy cosmic filaments </a>
                 <br/> 
-                <b>Mocz, P.</b>; Fialkov A.; Vogelsberger, M.; Becerra, F.; Amin, M.; Bose, S.; Boylan-Kolchin, M.; Chavanis, P.H.;  Hernquist, L.; Lancaster, L.;  Marinacci, M.; Robles, V.; Zavala, J; 2019 Phys. Rev. Lett. (Editors' Selection) 123, 14
+                <b>Mocz, P.</b>; Fialkov A.; Vogelsberger, M.; Becerra, F.; Amin, M.A,; Bose, S.; Boylan-Kolchin, M.; Chavanis, P.H.;  Hernquist, L.; Lancaster, L.;  Marinacci, M.; Robles, V.H.; Zavala, J; 2019 Phys. Rev. Lett. <b>(Editors' Selection)</b> 123, 14
                 </p>
                 <p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190804790Y/abstract"> Fuzzy Dark Matter Soliton Cores around Supermassive Black Holes </a>
@@ -1436,7 +1436,7 @@
                   <p class="item-intro text-muted">formation, gravitational clustering and interactions of solitons</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/oscillon.png" alt="">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/Sz079O4EJUE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <p>  Work with <a href="http://mustafa-amin.com/">Mustafa Amin</a> (Rice). We studied the non-equilibrium dynamics of an unstable scalar field in the universe, which results in formation and gravitational clustering of solitons.  Rapid formation of a large number of solitons is driven by attractive self-interactions of the field, after which gravity clusters them together, leading to mergers, scatterings and formation of soliton binaries.
+                  <p>  Work with <a href="http://mustafa-amin.com/">Mustafa A. Amin</a> (Rice). We studied the non-equilibrium dynamics of an unstable scalar field in the universe, which results in formation and gravitational clustering of solitons.  Rapid formation of a large number of solitons is driven by attractive self-interactions of the field, after which gravity clusters them together, leading to mergers, scatterings and formation of soliton binaries.
 				  </p>
                   <ul class="list-inline">
                     <li><a href="https://arxiv.org/abs/1902.07261">--paper link--</a></li>
