--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
 				<p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2019arXiv191105746M/abstract"> Galaxy Formation with BECDM - II. Cosmic Filaments and First Galaxies </a>
                 <br/> 
-                <b>Mocz, P.</b>; Fialkov, A.; Vogelsberger, M.; Becerra, F.; Shen, X.; Robles, V.H.; Amin, M.A.; Zavala, J.; Boylan-Kolchin, M.; Bose, S.; Marinacci, F,; Chavanis, P.H.; Lancaster, K.; Hernquist, L.; 2019 MNRAS, submitted
+                <b>Mocz, P.</b>; Fialkov, A.; Vogelsberger, M.; Becerra, F.; Shen, X.; Robles, V.H.; Amin, M.A.; Zavala, J.; Boylan-Kolchin, M.; Bose, S.; Marinacci, F.; Chavanis, P.H.; Lancaster, K.; Hernquist, L.; 2019 MNRAS, submitted
                 </p>
 				<p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2019PhRvL.123n1301M/abstract"> First star-forming structures in fuzzy cosmic filaments </a>
                 <br/> 
-                <b>Mocz, P.</b>; Fialkov A.; Vogelsberger, M.; Becerra, F.; Amin, M.A,; Bose, S.; Boylan-Kolchin, M.; Chavanis, P.H.;  Hernquist, L.; Lancaster, L.;  Marinacci, M.; Robles, V.H.; Zavala, J; 2019 Phys. Rev. Lett. <b>(Editors' Selection)</b> 123, 14
+                <b>Mocz, P.</b>; Fialkov A.; Vogelsberger, M.; Becerra, F.; Amin, M.A.; Bose, S.; Boylan-Kolchin, M.; Chavanis, P.H.;  Hernquist, L.; Lancaster, L.;  Marinacci, M.; Robles, V.H.; Zavala, J; 2019 Phys. Rev. Lett. <b>(Editors' Selection)</b> 123, 14
                 </p>
                 <p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190804790Y/abstract"> Fuzzy Dark Matter Soliton Cores around Supermassive Black Holes </a>
@@ -269,7 +269,7 @@
                 <p>
 				<a href="https://https://ui.adsabs.harvard.edu/abs/2019PhRvD.100f3507A/abstract"> Formation, Gravitational Clustering and Interactions of Non-relativistic Solitons in an Expanding Universe </a>
                 <br/>
-                Amin, M.; <b>Mocz, P.</b>; 2019 Phys.Rev.D, 100, 6
+                Amin, M.; <b>Mocz, P.</b>; 2019 Phys. Rev. D, 100, 6
                 </p>
                 <p>
 				<a href="http://ui.adsabs.harvard.edu/abs/2019MNRAS.485.2861C"> Heating of Milky Way disc stars by dark matter fluctuations in cold dark matter and fuzzy dark matter paradigms </a>
@@ -306,8 +306,6 @@
 				<br/>
                 <b>Mocz, P.</b>; Succi, S.; 2017 MNRAS, 465, 3154      
                 </p> -->
-                      <div id="collaborators">
-	                  </div>
                 <!-- <p> 
                 <a href="http://ui.adsabs.harvard.edu/abs/2017JCoPh.328..221M"> Correspondence between constrained transport and vector potential methods for MHD </a>
 			    <br/>
