--- a/index.html
+++ b/index.html
@@ -189,12 +189,21 @@
 			</p>
 			
 			<p>
-			  I have broad interests in galaxy evolution 
-			  and feedback, black hole physics, structure formation, 
+			  I have broad interests in cosmology, galaxy evolution and 
+			  feedback, black hole physics, structure formation, 
 			  turbulence in the ISM, alternative theories of dark 
-			  matter (scalar field dark matter), memory-efficient solvers for 
-			  the 6D Vlasov-Poisson equations, computer visualization, 
-			  and applications of machine learning and computer vision in astronomy. 
+			  matter (scalar field dark matter), numerical methods, 
+			  computer visualization, and applications of machine 
+			  learning and computer vision in astronomy. 
+            </p>
+            
+            <p>
+			<center>
+            <a href="https://web.astro.princeton.edu/"><img class="img-fluid" style="width:44px;height:60px;" src="img/princeton-logo.jpg" alt=""></a>
+            <a href="https://www.nasa.gov/"><img class="img-fluid" style="width:76px;height:60px;" src="img/nasa.png" alt=""></a>
+            <a href="https://www.nsf.gov/"><img class="img-fluid" style="width:60px;height:60px;" src="img/nsf.png" alt=""></a>
+            <a href="https://www.xsede.org/"><img class="img-fluid" style="width:80px;height:60px;" src="img/xsede.png" alt=""></a>
+            </center>
             </p>
             
         </div>
