--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Philip Mocz, astrophysics, professional website">
+    <meta name="description" content="Philip Mocz, NASA Einstein Fellow, Astrophysics, Computational Physics, Professional Website">
     <meta name="author" content="Philip Mocz">
 
     <title>Philip Mocz</title>
