--- a/index.html
+++ b/index.html
@@ -17,6 +17,46 @@
     <meta name="description" content="Philip Mocz, theoretical astrophysicist and NASA Einstein Fellow at Princeton University">
     <meta name="keywords" content="Philip Mocz, Astrophysics, Computational Physics, Einstein Fellow, Princeton University">
     <meta name="author" content="Philip Mocz">
+    <meta name="title" content="Philip Mocz">
+    <meta property="og:site_name" content="Philip Mocz">
+    <meta name="twitter:card" content="summary">
+    <meta property="og:type" content="website">
+    <meta name="twitter:title" content="Philip Mocz">
+    <meta name="twitter:site" content="@PMocz">
+    <meta name="twitter:description" content="Astrophysicist, NASA Einstein Fellow at Princeton">
+    <meta property="og:url" content="https://www.pmocz.github.io">
+    <meta property="og:title" content="Philip Mocz">
+    <meta property="og:description" content="Philip Mocz, theoretical astrophysicist and NASA Einstein Fellow at Princeton University">
+    <meta name="twitter:image:alt" content="Philip Mocz">
+    <meta name="twitter:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
+    <meta property="og:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="theme-color" content="#ffffff">
+    
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Person",
+      "name": "Philip Mocz",
+      "url": "https://pmocz.github.io",
+      "image": "https://pmocz.github.io/img/people/philip_mocz.jpg",
+      "sameAs": [
+        "https://www.facebook.com/pmocz",
+        "https://twitter.com/PMocz",
+        "https://www.instagram.com/pmocz/",
+        "https://www.youtube.com/channel/UC7egi9A5hnYLpNYJoPZdslA",
+        "https://www.linkedin.com/in/philip-mocz/",
+        "https://github.com/pmocz/",
+        "https://pmocz.github.io"
+      ],
+      "jobTitle": "NASA Einstein Fellow",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Princeton University"
+      }  
+    }
+    </script>
 
     <title>Philip Mocz</title>
 
