--- a/index.html
+++ b/index.html
@@ -18,18 +18,21 @@
     <meta name="keywords" content="Philip Mocz, Astrophysics, Computational Physics, Einstein Fellow, Princeton University">
     <meta name="author" content="Philip Mocz">
     <meta name="title" content="Philip Mocz">
-    <meta property="og:site_name" content="Philip Mocz">
-    <meta name="twitter:card" content="summary">
+    <meta itemprop="name" content="Philip Mocz">
+    <meta itemprop="description" content="Philip Mocz, theoretical astrophysicist and NASA Einstein Fellow at Princeton University">
+    <meta itemprop="image" content="http://pmocz.github.io/img/people/philip_mocz.jpg">
+    <meta property="og:url" content="https://www.pmocz.github.io">
     <meta property="og:type" content="website">
+    <meta property="og:title" content="Philip Mocz">
+    <meta property="og:site_name" content="Philip Mocz">
+    <meta property="og:description" content="Philip Mocz, theoretical astrophysicist and NASA Einstein Fellow at Princeton University">
+    <meta property="og:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Philip Mocz">
     <meta name="twitter:site" content="@PMocz">
-    <meta name="twitter:description" content="Astrophysicist, NASA Einstein Fellow at Princeton">
-    <meta property="og:url" content="https://www.pmocz.github.io">
-    <meta property="og:title" content="Philip Mocz">
-    <meta property="og:description" content="Philip Mocz, theoretical astrophysicist and NASA Einstein Fellow at Princeton University">
+    <meta name="twitter:description" content="Philip Mocz, Astrophysics, Computational Physics, Einstein Fellow, Princeton University">
     <meta name="twitter:image:alt" content="Philip Mocz">
     <meta name="twitter:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
-    <meta property="og:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
     <meta name="theme-color" content="#ffffff">
