--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Philip Mocz, theoretical astrophysicist and NASA Einstein Fellow at Princeton University">
-    <meta name="keywords" content="Philip Mocz, Astrophysics, Computational Physics, Einstein Fellow, Princeton University">
+    <meta name="keywords" content="Philip Mocz, Astrophysics, Cosmology, Computational Physics, Einstein Fellow, Princeton University">
     <meta name="author" content="Philip Mocz">
     <meta name="title" content="Philip Mocz">
     <meta itemprop="name" content="Philip Mocz">
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Philip Mocz">
     <meta name="twitter:site" content="@PMocz">
-    <meta name="twitter:description" content="Philip Mocz, Astrophysics, Computational Physics, Einstein Fellow, Princeton University">
+    <meta name="twitter:description" content="Philip Mocz, theoretical astrophysicist and NASA Einstein Fellow at Princeton University">
     <meta name="twitter:image:alt" content="Philip Mocz">
     <meta name="twitter:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
     <meta name="MobileOptimized" content="width">
