--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <span class="copyright">&copy; 2020 Philip Mocz</span>
+            <span class="copyright">&copy;2012-2020 Philip Mocz</span>
           </div>
         </div>
       </div>
@@ -1490,7 +1490,7 @@
                   <p>  Work with <a href="http://mustafa-amin.com/">Mustafa A. Amin</a> (Rice). We studied the non-equilibrium dynamics of an unstable scalar field in the universe, which results in formation and gravitational clustering of solitons.  Rapid formation of a large number of solitons is driven by attractive self-interactions of the field, after which gravity clusters them together, leading to mergers, scatterings and formation of soliton binaries.
 				  </p>
                   <ul class="list-inline">
-                    <li><a href="https://arxiv.org/abs/1902.07261">--paper link--</a></li>
+                    <li><a href="https://ui.adsabs.harvard.edu/abs/2019PhRvD.100f3507A">--paper link--</a></li>
                     <li><a href="https://youtu.be/Sz079O4EJUE">--more movies--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -1527,7 +1527,7 @@
                   <p> Work led by Princeton graduate student <a href="https://web.astro.princeton.edu/people/lachlan-lancaster">Lachlan Lancaster</a> on calculating different regimes of fuzzy dark matter dynamical friction, and applications to astrophysical systems.
 				  </p>
                   <ul class="list-inline">
-                    <li><a href="https://arxiv.org/abs/1909.06381">--paper link--</a></li>
+                    <li><a href="https://ui.adsabs.harvard.edu/abs/2020JCAP...01..001L">--paper link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
